# DeviceWatcher

./: CMakeLists.txt  CMakePresets.json  README.md  notify_server.py  vcpkg.json
include/: .gitkeep
src/: main.cpp
src/core/: DeviceManager.cpp  DeviceManager.h  DeviceModel.h  EventBus.cpp  EventBus.h  ExternalNotifier.cpp  ExternalNotifier.h  IosBackupService.cpp  IosBackupService.h  Serialize.cpp  Serialize.h  Utils.cpp  Utils.h
src/providers/: AndroidAdbProvider.cpp  AndroidAdbProvider.h  IosUsbmuxProvider.cpp  IosUsbmuxProvider.h  UsbProvider.cpp  UsbProvider.h
src/ui/: CliMenu.cpp  CliMenu.h
